--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = "alexsoftqa.sandbox.MyFirstProgram"
+mainClassName = "MyFirstProgram"
 
